--- a/index.html
+++ b/index.html
@@ -14,6 +14,12 @@
             function HomePage() {
                 const names = ['Ada Lovelace', 'Grace Hopper', 'Margaret Hamilton'];
 
+                const [likes, setLikes] = React.useState(0);
+
+                function handleClick() {
+                    setLikes(likes + 1);
+                }
+
                 return (
                     <div>
                         <Header title="Develop. Preview. Ship." />
@@ -22,6 +28,7 @@
                                 <li key={name}>{name}</li>
                             ))}
                         </ul>
+                        <button onClick={handleClick}>Like({likes})</button>
                     </div>
                 );
             }
